# ded_summer_school

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  onegin.cpp  onegin.h  onegin.txt  quadratic.cpp  quadratic.h  quadraticSolve.cpp  quadraticUtils.cpp  qudratic.h  run.sh  solve.cpp  tests.cpp  utils.cpp  utils.h
lectures/: 0.txt
quadratic/: Makefile  main.cpp  quadratic.h  quadraticSolve.cpp  quadraticUtils.cpp  run.sh  testUtils.cpp  testUtils.h  tests.cpp  utils.cpp
string_functions/: 1.txt  Doxyfile  README.dox  utils.cpp
